재료 검색 및 페이징